2009-05-25	Allan Hessenflow <allanh@kallisti.com>

	PR 1417/cpukit
	* rtems/score/cpu.h: corrected _CPU_ISR_Flash implementation, added
	core synchronization after all cli/sti.

2009-03-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1385/cpukit
	* cpu_asm.S: When the type rtems_boolean was switched to the C99 bool,
	the size changed from 4 bytes to 1 byte. The interrupt dispatching
	code accesses two boolean variables for scheduling purposes and the
	assembly implementations of this code did not get updated.

2009-02-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* cpu.c, rtems/score/cpu.h: Change prototype of IDLE thread to
	consistently return void * and take a uintptr_t argument.

2009-02-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* cpu.c, rtems/score/cpu.h: Eliminate _CPU_Thread_dispatch_pointer and
	passing address of _Thread_Dispatch to _CPU_Initialize. Clean up
	comments.

2008-09-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/types.h: Do not define boolean, single_precision,
	double_precision unless RTEMS_DEPRECATED_TYPES is given.

2008-09-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* cpu.c: Remove extraneous spaces.

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* cpu.c, rtems/score/cpu.h: Convert to "bool".

2008-08-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/types.h: Include stdbool.h.
	Use bool as base-type for boolean.

2008-08-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* ChangeLog: Add correct entry.

2008-08-13	Allan Hessenflow <allanh@kallisti.com>

	* cpu.c, cpu_asm.S, irq.c, rtems/score/cpu.h,
	rtems/score/cpu_asm.h: reworked interrupt handling to fix
	context switching.

2008-07-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/score/cpu.h: Correct prototype of Idle threads.

2008-06-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/score/cpu.h: Add CPU_SIMPLE_VECTORED_INTERRUPTS porting
	parameter to indicate that the port uses the Simple Vectored