@@ -1,3 +1,8 @@
+2010-03-27	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* Makefile.am: Remove unused file.
+	* irq.c: Removed.
+
 2009-05-25	Allan Hessenflow <allanh@kallisti.com>
 
 	PR 1417/cpukit
